@@ -1,6 +1,7 @@
 Revision history for Perl module App::PAIA
 
 {{$NEXT}}
+  - improved App::PAIA::Tester
 
 0.29  2015-04-28 11:55:37 CEST
   - take base URL from session if available (issue #10)
